--- a/pom.xml
+++ b/pom.xml
@@ -9,7 +9,12 @@
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <maven.compiler.source>1.8</maven.compiler.source>
         <maven.compiler.target>1.8</maven.compiler.target>
+        <!-- Library versions -->
+        <junit.version>4.12</junit.version>
+        <javaee-api.version>7.0</javaee-api.version>
         <jmh.version>1.13</jmh.version>
+        <web3j.version>3.1.1</web3j.version>
+        <hdrhist.version>2.1.9</hdrhist.version>
     </properties>
     
     <dependencies>
@@ -17,13 +22,35 @@
         <dependency>
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
-            <version>4.12</version>
+            <version>${junit.version}</version>
             <scope>test</scope>
+            <type>jar</type>
         </dependency>
+        
+        <!-- Web3j -->
+        <dependency>
+            <groupId>org.web3j</groupId>
+            <artifactId>core</artifactId>
+            <version>${web3j.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.web3j</groupId>
+            <artifactId>crypto</artifactId>
+            <version>${web3j.version}</version>
+        </dependency>
+
+        
+        <dependency>
+            <groupId>javax</groupId>
+            <artifactId>javaee-api</artifactId>
+            <version>${javaee-api.version}</version>
+            <scope>provided</scope>
+        </dependency>
+
         <dependency>
             <groupId>org.hdrhistogram</groupId>
             <artifactId>HdrHistogram</artifactId>
-            <version>2.1.9</version>
+            <version>${hdrhist.version}</version>
         </dependency>
         <dependency>
             <groupId>org.openjdk.jmh</groupId>
